dbus_g_value_build_g_variant(): Fix NULL strv case

g_variant_new_strv(NULL, -1) is not accepted, but (NULL, 0) is good.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=71811
Reviewed-by: Simon McVittie <simon.mcvittie@collabora.co.uk>